--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -12,14 +12,14 @@
 
     <Button
         android:id="@+id/recommendButton"
-        android:layout_width="381dp"
-        android:layout_height="46dp"
+        android:layout_width="235dp"
+        android:layout_height="51dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="Recommend Something"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/searchByTagsHomeButton"
         app:layout_constraintTop_toBottomOf="@+id/searchTextView" />
 
     <TextView
@@ -66,5 +66,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mainActivityToolbar"
         app:srcCompat="@drawable/ic_search_black_24dp" />
+
+    <Button
+        android:id="@+id/searchByTagsHomeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Search by Tags"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchTextView" />
 
 </android.support.constraint.ConstraintLayout>
