--- a/app/src/main/res/layout/custom_listview_layout.xml
+++ b/app/src/main/res/layout/custom_listview_layout.xml
@@ -2,117 +2,158 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="155dp"
-        android:layout_height="148dp"
+        android:layout_width="169dp"
+        android:layout_height="160dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/sentosa" />
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="214dp"
-        android:layout_height="16dp"
+        android:layout_width="227dp"
+        android:layout_height="19dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="7dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="0dp"
         android:layout_toEndOf="@+id/imageView2"
         android:text="Activity:"
-        android:textColor="#6525D8" />
+        android:textColor="#6525D8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView14"
-        android:layout_width="213dp"
-        android:layout_height="19dp"
-        android:layout_below="@+id/textView11"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/activityTextView"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="3dp"
         android:layout_toEndOf="@+id/imageView2"
         android:text="Location:"
-        android:textColor="#6525D8" />
+        android:textColor="#6525D8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/activityTextView" />
 
     <TextView
         android:id="@+id/textView16"
-        android:layout_width="215dp"
-        android:layout_height="16dp"
-        android:layout_below="@+id/textView14"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/locationTextView"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="6dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="2dp"
         android:layout_toEndOf="@+id/imageView2"
         android:text="Time Period:"
-        android:textColor="#6525D8" />
+        android:textColor="#6525D8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/locationTextView" />
 
     <TextView
         android:id="@+id/activityTextView"
-        android:layout_width="215dp"
-        android:layout_height="19dp"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/textView11"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="6dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="2dp"
         android:layout_toEndOf="@+id/imageView2"
-        android:text="TextView" />
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
         android:id="@+id/locationTextView"
-        android:layout_width="218dp"
-        android:layout_height="21dp"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/textView14"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="2dp"
         android:layout_toEndOf="@+id/imageView2"
-        android:text="TextView" />
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <TextView
         android:id="@+id/timePeriodTextView"
-        android:layout_width="218dp"
-        android:layout_height="17dp"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/textView16"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="3dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="2dp"
         android:layout_toEndOf="@+id/imageView2"
-        android:text="TextView" />
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="215dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/timePeriodTextView"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="19dp"
+        android:layout_marginStart="13dp"
         android:layout_marginTop="2dp"
-        android:layout_marginEnd="7dp"
+        android:layout_marginEnd="3dp"
         android:layout_toEndOf="@+id/imageView2"
         android:text="Tags:"
-        android:textColor="#6525D8" />
+        android:textColor="#6525D8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/timePeriodTextView" />
 
     <TextView
         android:id="@+id/tagsView"
-        android:layout_width="213dp"
-        android:layout_height="17dp"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/textView4"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="7dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="3dp"
         android:layout_toEndOf="@+id/imageView2"
-        android:text="TextView" />
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.0" />
+
+
+
 
 </RelativeLayout>
