--- a/app/src/main/res/layout/activity_search_by_location.xml
+++ b/app/src/main/res/layout/activity_search_by_location.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:text="Serach by Location"
+        android:text="Search by Location"
         android:textColor="#673AB7"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
