--- a/app/src/main/res/layout/activity_search_by_tags_only.xml
+++ b/app/src/main/res/layout/activity_search_by_tags_only.xml
@@ -10,10 +10,13 @@
         android:id="@+id/searchByTagButtono"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
         android:text="SEARCH"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/randomTextV"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayouto" />
 
     <TextView
@@ -297,20 +300,16 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchByTagButtono" />
+        app:layout_constraintTop_toBottomOf="@+id/randomTextV" />
 
     <TextView
         android:id="@+id/randomTextV"
-        android:layout_width="wrap_content"
+        android:layout_width="275dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="24dp"
         android:hint="tags"
-        app:layout_constraintEnd_toStartOf="@+id/searchByTagButtono"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView30"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayouto" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView30" />
 
     <TextView
         android:id="@+id/textView30"
