--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="navy">#000080</color>
     <color name="egyptian">#1034A6</color>
     <color name="electric">#73C2FB</color>
+    <color name="lightgray">#D3D3D2</color>
 </resources>
